k8s/applications/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  selector:
    matchLabels:
      app: plex
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: plex
          image: ghcr.io/linuxserver/plex:1.43.2
          ports:
            - name: ingress
              containerPort: 32400
          volumeMounts:
            - name: plex
              mountPath: /config
            - name: applications
              mountPath: /transcode
              subPath: plex
            - name: libraries
              mountPath: /data/movies
              subPath: movies/sd
            - name: libraries
              mountPath: /data/movies-uhd
              subPath: movies/uhd
            - name: libraries
              mountPath: /data/movies-requested
              subPath: movies/requested
            - name: libraries
              mountPath: /data/extras
              subPath: extras/sd
            - name: libraries
              mountPath: /data/tv
              subPath: tv/sd
            - name: libraries
              mountPath: /data/tv-uhd
              subPath: tv/uhd
            - name: libraries
              mountPath: /data/tv-requested
              subPath: tv/requested
            - name: libraries
              mountPath: /data/music
              subPath: music
            - name: libraries
              mountPath: /data/youtube
              subPath: youtube
          resources:
            limits:
              gpu.intel.com/i915: 1
            requests:
              gpu.intel.com/i915: 1
      volumes:
        - name: plex
          persistentVolumeClaim:
            claimName: plex
        - name: applications
          persistentVolumeClaim:
            claimName: applications
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
      resources:
        limits:
          cpu: 1
          memory: 2Gi
        requests:
          cpu: 500m
          memory: 2Gi
