k8s/applications/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.82
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
    - name: ingress
      port: 32400
      targetPort: ingress
