k8s/applications/plex/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("plex.mchill.io")
      kind: Rule
      services:
        - name: plex-tcp
          port: 32400
